GithUb links to projects added Simplified Skills section

--- a/index.html
+++ b/index.html
@@ -67,23 +67,91 @@
                 </div>
                 <div class="hero-content">
                     <h1 class="hero-title">
-                        Hi, I'm <span class="gradient-text">Sanket Deshpande</span>
+                        <span class="gradient-text">Sanket Deshpande</span>
                     </h1>
                     <p class="hero-description">
                         I build and ship AI products end-to-end — from LLMs and multimodal systems to distributed training and real-time inference. My edge: speed, ownership, and turning research into production.
                     </p>
-                    <div class="hero-highlights">
-                        <div class="highlight-item">
-                            <strong>Shipped AI Products:</strong> Cre8able (multimodal video-editing, 70% workload reduction) & Whisker (LLM pet-care assistant, sub-second streaming)
+                    <div class="hero-skills-grid">
+                        <!-- Research to Production -->
+                        <div class="hero-skill-category">
+                            <div class="hero-skill-category-header">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+                                    <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
+                                    <path d="M3 9H21M9 9V21" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                                <h3>Research to Production</h3>
+                            </div>
+                            <div class="hero-skill-items">
+                                <div class="hero-skill-item">PyTorch DDP</div>
+                                <div class="hero-skill-item">Custom Architectures</div>
+                                <div class="hero-skill-item">3D CNNs</div>
+                                <div class="hero-skill-item">Transformers</div>
+                                <div class="hero-skill-item">Multi-GPU Training</div>
+                                <div class="hero-skill-item">SLURM / HPC</div>
+                                <div class="hero-skill-item">Experiment Tracking</div>
+                            </div>
                         </div>
-                        <div class="highlight-item">
-                            <strong>Applied ML Systems:</strong> 3D CNN-Transformer hybrids (+15% performance), multi-GPU training (7× faster epochs)
+
+                        <!-- AI Product Engineering -->
+                        <div class="hero-skill-category">
+                            <div class="hero-skill-category-header">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+                                    <rect x="2" y="6" width="20" height="12" rx="2" stroke="currentColor" stroke-width="2"/>
+                                    <circle cx="6" cy="12" r="1.5" fill="currentColor"/>
+                                    <circle cx="10" cy="12" r="1.5" fill="currentColor"/>
+                                </svg>
+                                <h3>AI Product Engineering</h3>
+                            </div>
+                            <div class="hero-skill-items">
+                                <div class="hero-skill-item">LLM APIs (Gemini, GPT)</div>
+                                <div class="hero-skill-item">RAG Systems</div>
+                                <div class="hero-skill-item">Vector DBs</div>
+                                <div class="hero-skill-item">Multimodal AI</div>
+                                <div class="hero-skill-item">Prompt Engineering</div>
+                                <div class="hero-skill-item">Agent Systems</div>
+                                <div class="hero-skill-item">Streaming Inference</div>
+                            </div>
                         </div>
-                        <div class="highlight-item">
-                            <strong>Multi-Agent & LLM Systems:</strong> Built debate frameworks with LLM-as-Judge evaluation, adversarial dialogue systems, and RAG-powered recommendation engines
+
+                        <!-- Full-Stack Development -->
+                        <div class="hero-skill-category">
+                            <div class="hero-skill-category-header">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+                                    <ellipse cx="12" cy="6" rx="8" ry="3" stroke="currentColor" stroke-width="2"/>
+                                    <path d="M4 6V18C4 19.66 7.58 21 12 21C16.42 21 20 19.66 20 18V6" stroke="currentColor" stroke-width="2"/>
+                                    <path d="M4 12C4 13.66 7.58 15 12 15C16.42 15 20 13.66 20 12" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                                <h3>Full-Stack Development</h3>
+                            </div>
+                            <div class="hero-skill-items">
+                                <div class="hero-skill-item">Python</div>
+                                <div class="hero-skill-item">FastAPI</div>
+                                <div class="hero-skill-item">Postgres</div>
+                                <div class="hero-skill-item">React / Next.js</div>
+                                <div class="hero-skill-item">REST / WebSocket</div>
+                                <div class="hero-skill-item">FFmpeg</div>
+                                <div class="hero-skill-item">S3 / Cloud Storage</div>
+                            </div>
                         </div>
-                        <div class="highlight-item">
-                            <strong>Stack:</strong> PyTorch, Transformers, FastAPI, Docker, Postgres, AWS/GCP, real-time inference pipelines
+
+                        <!-- Deployment & Scale -->
+                        <div class="hero-skill-category">
+                            <div class="hero-skill-category-header">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+                                    <path d="M19 16.9C20.1 16.4 21 15.3 21 14C21 12.9 20.5 11.9 19.7 11.3C19.9 10.9 20 10.5 20 10C20 8.3 18.7 7 17 7C16.7 7 16.4 7.1 16.1 7.1C15.3 5.3 13.5 4 11.5 4C8.5 4 6 6.5 6 9.5C6 9.7 6 9.9 6.1 10.1C4.3 10.6 3 12.2 3 14C3 16.2 4.8 18 7 18H18C18.7 18 19.4 17.6 19 16.9Z" stroke="currentColor" stroke-width="2"/>
+                                </svg>
+                                <h3>Deployment & Scale</h3>
+                            </div>
+                            <div class="hero-skill-items">
+                                <div class="hero-skill-item">Docker / Containers</div>
+                                <div class="hero-skill-item">AWS / GCP</div>
+                                <div class="hero-skill-item">CI/CD</div>
+                                <div class="hero-skill-item">Model Serving</div>
+                                <div class="hero-skill-item">Monitoring</div>
+                                <div class="hero-skill-item">Load Balancing</div>
+                                <div class="hero-skill-item">Cost Optimization</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -274,6 +342,26 @@
                             <span class="tag">FastAPI</span>
                             <span class="tag">Postgres</span>
                         </div>
+                        <a href="https://chat.whiskerapp.ai/login" target="_blank" rel="noopener noreferrer" class="project-link">
+                            Try Live Demo →
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Reddit MCP Server -->
+                <div class="project-card" data-category="ai-products">
+                    <div class="project-content">
+                        <h3 class="project-title">Reddit MCP Server</h3>
+                        <p class="project-description">Model Context Protocol server for Reddit integration. Enables AI assistants to interact with Reddit's API for fetching posts, comments, and user data in a structured way.</p>
+                        <div class="project-tags">
+                            <span class="tag">MCP</span>
+                            <span class="tag">Reddit API</span>
+                            <span class="tag">Python</span>
+                            <span class="tag">AI Tools</span>
+                        </div>
+                        <a href="https://github.com/pvdsan/Reddit-MCP-Server" target="_blank" rel="noopener noreferrer" class="project-link">
+                            View on GitHub →
+                        </a>
                     </div>
                 </div>
 
@@ -288,6 +376,9 @@
                             <span class="tag">ChromaDB</span>
                             <span class="tag">Gemini</span>
                         </div>
+                        <a href="https://github.com/HiNala/vc_nest" target="_blank" rel="noopener noreferrer" class="project-link">
+                            View on GitHub →
+                        </a>
                     </div>
                 </div>
 
@@ -302,6 +393,9 @@
                             <span class="tag">Python</span>
                             <span class="tag">ORB</span>
                         </div>
+                        <a href="https://github.com/pvdsan/Visual_PySLAM_Engine" target="_blank" rel="noopener noreferrer" class="project-link">
+                            View on GitHub →
+                        </a>
                     </div>
                 </div>
 
@@ -316,6 +410,9 @@
                             <span class="tag">Bayesian</span>
                             <span class="tag">SPM12</span>
                         </div>
+                        <a href="https://github.com/pvdsan/Fronto-thalamo-cerebel-circuit-in-predicting-cognition-using-ML" target="_blank" rel="noopener noreferrer" class="project-link">
+                            View on GitHub →
+                        </a>
                     </div>
                 </div>
 
@@ -330,6 +427,9 @@
                             <span class="tag">MATLAB</span>
                             <span class="tag">Signal Processing</span>
                         </div>
+                        <a href="https://github.com/pvdsan/mmWaveRadar_Experiments" target="_blank" rel="noopener noreferrer" class="project-link">
+                            View on GitHub →
+                        </a>
                     </div>
                 </div>
 
@@ -344,6 +444,9 @@
                             <span class="tag">PyTorch</span>
                             <span class="tag">MOT</span>
                         </div>
+                        <a href="https://github.com/pvdsan/Pose_Assisted_Trackformer_Multi_Object_Tracking" target="_blank" rel="noopener noreferrer" class="project-link">
+                            View on GitHub →
+                        </a>
                     </div>
                 </div>
             </div>
@@ -369,96 +472,6 @@
                     <p class="publication-venue">IEEE ISBI 2025 (1‑page abstract), EMBS 2025 (4‑page paper)</p>
                     <p class="publication-description">Validated the cerebellum’s role in cognition and advanced explainability for neuroimaging‑based prediction models.</p>
                     <a href="#" class="publication-link">View</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Skills Section -->
-    <section id="skills" class="section">
-        <div class="container">
-            <div class="section-header">
-                <span class="section-badge">Skills</span>
-                <h2 class="section-title">Technical Expertise</h2>
-                <p class="section-description">
-                    Technologies and tools I work with regularly
-                </p>
-            </div>
-            <div class="skills-grid">
-                <!-- ML/AI -->
-                <div class="skill-category">
-                    <div class="skill-category-header">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
-                            <path d="M3 9H21M9 9V21" stroke="currentColor" stroke-width="2"/>
-                        </svg>
-                        <h3>ML / AI</h3>
-                    </div>
-                    <div class="skill-items">
-                        <div class="skill-item">PyTorch</div>
-                        <div class="skill-item">Transformers</div>
-                        <div class="skill-item">CLIP</div>
-                        <div class="skill-item">Multimodal Pipelines</div>
-                        <div class="skill-item">Computer Vision</div>
-                        <div class="skill-item">Scikit‑learn</div>
-                        <div class="skill-item">CUDA</div>
-                    </div>
-                </div>
-
-                <!-- LLMs & RAG -->
-                <div class="skill-category">
-                    <div class="skill-category-header">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <rect x="2" y="6" width="20" height="12" rx="2" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="6" cy="12" r="1.5" fill="currentColor"/>
-                            <circle cx="10" cy="12" r="1.5" fill="currentColor"/>
-                        </svg>
-                        <h3>LLMs & RAG</h3>
-                    </div>
-                    <div class="skill-items">
-                        <div class="skill-item">Hugging Face</div>
-                        <div class="skill-item">LangChain</div>
-                        <div class="skill-item">Pinecone / FAISS</div>
-                        <div class="skill-item">Custom RAG Pipelines</div>
-                        <div class="skill-item">Streaming APIs</div>
-                        <div class="skill-item">Evaluation</div>
-                    </div>
-                </div>
-
-                <!-- Production -->
-                <div class="skill-category">
-                    <div class="skill-category-header">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <ellipse cx="12" cy="6" rx="8" ry="3" stroke="currentColor" stroke-width="2"/>
-                            <path d="M4 6V18C4 19.66 7.58 21 12 21C16.42 21 20 19.66 20 18V6" stroke="currentColor" stroke-width="2"/>
-                            <path d="M4 12C4 13.66 7.58 15 12 15C16.42 15 20 13.66 20 12" stroke="currentColor" stroke-width="2"/>
-                        </svg>
-                        <h3>Production</h3>
-                    </div>
-                    <div class="skill-items">
-                        <div class="skill-item">FastAPI</div>
-                        <div class="skill-item">Docker</div>
-                        <div class="skill-item">Postgres</div>
-                        <div class="skill-item">Async/Streaming APIs</div>
-                        <div class="skill-item">Git</div>
-                    </div>
-                </div>
-
-                <!-- Scaling & Infra -->
-                <div class="skill-category">
-                    <div class="skill-category-header">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M19 16.9C20.1 16.4 21 15.3 21 14C21 12.9 20.5 11.9 19.7 11.3C19.9 10.9 20 10.5 20 10C20 8.3 18.7 7 17 7C16.7 7 16.4 7.1 16.1 7.1C15.3 5.3 13.5 4 11.5 4C8.5 4 6 6.5 6 9.5C6 9.7 6 9.9 6.1 10.1C4.3 10.6 3 12.2 3 14C3 16.2 4.8 18 7 18H18C18.7 18 19.4 17.6 19 16.9Z" stroke="currentColor" stroke-width="2"/>
-                        </svg>
-                        <h3>Scaling & Infra</h3>
-                    </div>
-                    <div class="skill-items">
-                        <div class="skill-item">DDP</div>
-                        <div class="skill-item">SLURM</div>
-                        <div class="skill-item">AWS / GCP</div>
-                        <div class="skill-item">Multi‑GPU Training</div>
-                        <div class="skill-item">Real‑time Inference</div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -527,8 +540,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-text">
-                    <p>© 2024 Sanket Deshpande. All rights reserved.</p>
-                    <p class="footer-subtext">Built with HTML, CSS, and JavaScript</p>
+                    <p>© 2025 Sanket Deshpande. All rights reserved.</p>
+                    <p class="footer-subtext">Built with ❤️ in my free time</p>
                 </div>
                 <div class="footer-social">
                     <a href="https://github.com/pvdsan" target="_blank" rel="noopener" aria-label="GitHub">
